
[float]
===== Bug fixes
* Fix cross-plugin dependencies triggering NoClassDefFound - {pull}2509[#2509]
* Fix status code setting in AWS Lambda transactions triggered by API Gateway V1 - {pull}2346[#2346]
* Fix classloading OSGi bundles with partial dependency on Servlet API + avoid SecurityException with Apache Sling - {pull}2418[2418]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.29.0]]
==== 1.29.0 - 2022/02/09

[float]
===== Breaking changes
* Changes in service name auto-discovery of jar files (see Features section)

[float]
===== Features
* Exceptions that are logged using the fatal log level are now captured (log4j2 only) - {pull}2377[#2377]
* Replaced `authorization` in the default value of `sanitize_field_names` with `*auth*` - {pull}2326[#2326]
* Unsampled transactions are dropped and not sent to the APM-Server if the APM-Server version is 8.0+ - {pull}2329[#2329]
* Adding agent logging capabilities to our SDK, making it available for external plugins - {pull}2390[#2390]
* Service name auto-discovery improvements
** For applications deployed to application servers (`war` files) and standalone jars that are started with `java -jar`,
   the agent now discovers the `META-INF/MANIFEST.MF` file.
** If the manifest contains the `Implementation-Title` attribute, it is used as the default service name - {pull}1921[#1921], {pull}2434[#2434] +
  *Note*: this may change your service names if you relied on the auto-discovery that uses the name of the jar file.
  If that jar file also contains an `Implementation-Title` attribute in the `MANIFEST.MF` file, the latter will take precedence.
** When the manifest contains the `Implementation-Version` attribute, it is used as the default service version - {pull}1726[#1726], {pull}1922[#1922], {pull}2434[#2434]
* Added support for instrumenting Struts 2 static resource requests - {pull}1949[#1949]
* Added support for Java/Jakarta WebSocket ServerEndpoint - {pull}2281[#2281]